[package]
name = "aoc2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18.0"
futures = "0.3.18"
logos = "0.12.0"
ndarray = "0.15.4"
snafu = {version = "0.6.10", features = ["futures"]}
structopt = "0.3.25"
strum = {version = "0.23.0", features = ["derive"]}
tokio = {version = "1.14.0", features = ["full"]}
tokio-util = {version = "0.6.9", features = ["codec"]}
